kube-config/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backendtodo
spec:
  selector:
    matchLabels:
      app: backendtodo
  template:
    metadata:
      labels:
        app: backendtodo
    spec:
      containers:
      - name: backendtodo
        image: sergiotz/backend-todo:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
