kube-config/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backendtodoservice
spec:
  selector:
    app: backendtodo
  ports:
  - port: 8080
    targetPort: 8080
